--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-<hr>
-<div>
+<div class='footer'>
+	<hr>
 	<p>
 	<a href='/' ><i class='fas fa-home'> Home</i></a>
 	<a href='/contact.html'><i class='far fa-id-card'> Contact</i></a>
