--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
 	<hr>
 	<p>
 	<a href='/' ><i class='fas fa-home'> Home</i></a>
-	<a href='/contact.html'><i class='far fa-id-card'> Contact</i></a>
+	<a href='/contact.php'><i class='far fa-id-card'> Contact</i></a>
 	<a href='https://c.xkcd.com/random/comic' target='_blank'>
 		<i class='fas fa-square-full'> Random XKCD</i></a>
 	<a href='https://github.com/Vokda'><i class='fab fa-github'> My github</i></a>
