--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -14,6 +14,8 @@ div.overview_img
 	padding: 0.2em;
 	height: auto;
 	align: center;
+	border: thin solid green;
+	margin-bottom: 0.5em;
 }
 
 div.overview_img img
