Forum and small stuff
- Rewrote forum in Perl and stored it in the database.
- Minor change in books and added .gitignore.
- Updated errors to show a random image.
- Updated style to fit with forum.
- Added services ANN for future project.
- Starting to switch over to perl template toolkit.
- Added script for viewing logs
- Minor change to server config for dev

--- a/global.css
+++ b/global.css
@@ -96,9 +96,31 @@ figcaption
 {
 }
 
+div
+{
+	padding: 1em;
+}
+
+.box
+{
+	border: thin solid;
+}
+
 /* for grades. Making use of old classes present in html */
 
 .centered
 {
 	text-align: center;
+}
+
+rect
+{
+	fill: rgb(0,0,255);
+}
+
+textarea
+{
+	width:400px;
+	height:200px;
+	box-sizing:inherit;
 }
