Added animations to buttons and removed icons
Added animations to buttons.
Icons are broken, or maybe rather the old link is broken requires login
and I can't be arsed. Just text now.
Added some pfp placeholders
placeholders are randomly picked and not shown by default
The placeholders are viewed with fun_mode=true as query parameter
Link in footer to fun mode

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,13 @@
 	list-style-type: square;
 	font-size: medium;
 	border-color: #28dd18;
+    cursor: url('assets/cursor.png'), default;
+}
+
+@keyframes color_change
+{
+    100% { color: darkgreen; }
+    100% { background: white; }
 }
 
 fieldset
@@ -47,6 +54,8 @@ button
 button:hover
 {
 	background: #646464;
+    animation: color_change 1s infinite;
+    animation-direction: alternate;
 }
 
 button:active
@@ -93,16 +102,24 @@ th
 
 figure
 {
-	position: relative;
+	/*position: relative;
 	float: right;
 	border: thin solid;
-	text-align: center;
+	text-align: center;*/
 }
 
 figure img
 {
 	display: block;
 	background: grey;
+    align:middle;
+}
+
+img
+{
+    align:middle;
+    max-width:640px;
+    max-height:400px;
 }
 
 figcaption
@@ -137,4 +154,3 @@ textarea
 	height:200px;
 	box-sizing:inherit;
 }
-
