--- a/app/views/home/about-me.html.erb
+++ b/app/views/home/about-me.html.erb
@@ -70,7 +70,8 @@ interests.each do |i|
 <% end %>
 </ul>
 
-<h4>Stuff don't like</h4>
+<!--h4>Stuff don't like</h4>
+<% #comment this part out for now %>
 <ul>
   <%
     dislikes=['Windows','Frontend','Javascript','Java ', 'React','Coffee', "PHP"]
@@ -81,7 +82,7 @@ interests.each do |i|
     <%= i %>
   </li>
 <% end %>
-</ul>
+</ul-->
 
 <p>
   My CV can be found <%= link_to 'here', '/CV.pdf' %>
