--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,13 @@
 <footer>
-  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <div class='footer'>
       <hr>
       <p>
-      <a href='/' ><i class='fas fa-home'> Home</i></a>
-      <a href='/contact.php'><i class='far fa-id-card'> Contact</i></a>
-      <a href='https://c.xkcd.com/random/comic' target='_blank'>
-          <i class='fas fa-square-full'> Random XKCD</i></a>
-      <a href='https://github.com/Vokda'><i class='fab fa-github'> My github</i></a>
+      <a href='/' >Home</i></a>
+      <a href='/contact.php'>Contact</i></a>
+      <a href='https://c.xkcd.com/random/comic' target='_blank'>Random XKCD</i></a>
+      <a href='https://github.com/Vokda'>My github</i></a>
       <%= link_to 'CV', '/CV.pdf' %>
+      <a href='/?fun_mode=true' >Fun mode</i></a>
       </p>
   </div>
 </footer>
