--- a/app/views/pile/index.html.erb
+++ b/app/views/pile/index.html.erb
@@ -1,3 +1,15 @@
 <h1>
   The Pile
 </h1>
+<div>
+  <h2>
+    Welcome to The Pile! 
+  </h2>
+  <p>
+    This is where I pile everything I want to share with the world. 
+  </p>
+</div>
+<div>
+  <h3> Peek @ Pile </h3>
+  <%= generate_button('Peek', "#@page_title/peek", true) %>
+</div>
